# doanythingPDF

./: sus.sh
backend/: architecture.md  pyproject.toml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  tailwind.config.js
frontend/src/services/: chatService.ts
